# OI

./: .gitignore  CMakeLists.txt  Pipfile  friday.py  gift1.py  test.py  test_friday.py  testbeads.py
1.2 just a try/: test.in  test_gift1.py
1.3 complete search/: dualpal.cpp  namenum.cpp  namenum.in  palsquare.cpp
1.4 greedy/: barn1.cpp  crypt1.cpp  milk.cpp  skidesign.cpp  skidesign.in  wormhole.cpp  wormhole.in
1.5 more search techniques/: ariprog.cpp  milk3.cpp  milk3.in
atcoder/: .gitignore  Walking_Takahashi.cpp  template.cpp  template.d
atcoder/abc151/: .gitignore  abc151  achieve_the_goal  dub.json  next_alphabet  welcome_to_atcoder
atcoder/abc151/source/: achieve_the_goal.d  app.d  max_min_sums.d  maze_master.d  next_alphabet.d  welcome_to_atcoder.d
atcoder/abc175/: Making_Triangle.cpp  Moving_Piece.cpp  README.md  Rainy_Season.cpp  Walking_Takahashi.cpp
atcoder/abc176/: CMakeLists.txt  Multipleof9.cpp  Step.cpp  Takoyaki.cpp  WizardinMaze  WizardinMaze.cpp  input_gen.py
atcoder/abc177/: .gitignore  dub.json
atcoder/abc177/source/: b.css  c.html  don_t_be_late.d  substring.d
atcoder/arc108/: CMakeLists.txt  d.cpp  input.txt
codeforces/: deconstructed_password
codeforces/contest_1402/: dub.json
codeforces/contest_1402/source/: fancy_fence.d
codeforces/contest_265770/: dub.json
codewars/: .gitignore  settings.gradle
codewars/hs/: Church.hs  GetToTheChoppa.hs  Lensmaker.hs  Parens.hs  Pyramid.hs  SymbolicDifferentiationOfPrefixExpressions.hs  TinyThreePassCompiler.hs  TreeByLevels.hs  UnlimitedGameOfLife.hs  john.hs
codewars/kt/: build.gradle
codewars/ocaml/: PI_approximation.ml
codewars/rb/: bit-counting.rb  find_even_index.rb  max_sequence.rb  persistence.rb  same-comp.rb
cpp/: .#milk2.out  CMakeLists.txt  milk2  milk2.cpp  transform.cpp  transform.in
lanqiao/: CMakeLists.txt
lanqiao/src/: a.out  character.cpp  character.in
leetcode/leetcode_gradle/: build.gradle  settings.gradle
leetcode/leetcode_rs/: Cargo.toml
leetcode/leetcode_rs/src/: main.rs
luogu/: CMakeLists.txt  P1086.cpp  P1098.cpp  P1226.cpp  P1908.cpp  P3952.cpp  a.out  p1023.cpp  p1023.in  p1042.cpp  p1908.py
luogu/P1873/: P1873.cpp
py/: ride.py
test/: string_compare.cpp
usaco/: CMakeLists.txt
usaco/1.2 just a try/: beads.py  test.out  test_friday.py
usaco/1.3 complete search/: dualpal.cpp  milk2.cpp  namenum.cpp  palsquare.cpp  transform.cpp
usaco/1.4 greedy/: barn1.cpp  barn1.in  combo.cpp  combo.in  crypt1.cpp  milk.cpp  skidesign.cpp  wormhole.cpp
usaco/1.5 more search techniques/: ariprog.cpp  ariprog.in  milk3.cpp  milk3.in  tuple_test.cpp
usaco/1.6 Binary Numbers/: numtri.cpp  pprime.cpp  sprime.cpp
usaco/2.1 graph theory/: castle.cpp  castle.in
(+20 files in other folders)
