cmake_minimum_required(VERSION 3.12.0)
project(usaco-cpp)

include_directories("1.3 complete search")

add_executable(milk2 "1.3 complete search/milk2.cpp")
add_executable(transform "1.3 complete search/transform.cpp")
add_executable(namenum "1.3 complete search/namenum.cpp")
add_executable(palsquare "1.3 complete search/palsquare.cpp")
add_executable(dualpal "1.3 complete search/dualpal.cpp")